Fix: mise à jour clé publique Stripe frontend

--- a/abonnement.html
+++ b/abonnement.html
@@ -667,7 +667,7 @@
         const BACKEND_URL = 'https://qrguide-backend.onrender.com'; // ⚠️ À MODIFIER après déploiement
 
         // Initialiser Stripe.js
-        const stripe = Stripe('pk_test_51SfMI9Iz6IOM6VUSJNshS1uo8C4fdut9jLoTJj4Gr0NoQWoU9arxMtVxO1InU7GjWpBB3MsGhTbTI9GqM0fPDd4O00biJQWawP'); // ⚠️ À MODIFIER avec votre clé publique
+        const stripe = Stripe('pk_test_51SfMI0IuJcG0yZsyft4aaNpPWOL1r8jmOzoiJY4i3ChsAraAkywvATuBSaQopIcYQov0De84WONpRBwJkZ46jcvP00m1x3EDLD');
 
         async function processPayment() {
             const plan = document.querySelector('input[name="plan"]:checked');
