Fix démo: hauteur hero desktop + Cannes→Saint-Paul Réunion

--- a/demo-guide/index.html
+++ b/demo-guide/index.html
@@ -35,7 +35,7 @@
                     <div class="hero-date" id="current-date">-- --- ----</div>
                 </div>
                 <div class="hero-weather" id="weather-info">
-                    <div class="weather-city">Cannes</div>
+                    <div class="weather-city">Saint-Paul</div>
                     <span class="weather-icon">☀️</span>
                     <span class="weather-temp">--°</span>
                     <span class="weather-desc" id="weather-desc">Ensoleillé</span>
@@ -46,12 +46,12 @@
                 <span class="stars">⭐⭐⭐⭐</span>
                 <span class="rating-text" data-i18n="villa_premium">Villa Premium</span>
             </div>
-            <h1 class="hero-title" data-i18n="villa_title">Villa Vue Mer Cannes</h1>
+            <h1 class="hero-title" data-i18n="villa_title">Villa Vue Mer Saint-Paul</h1>
             <p class="hero-location">
                 <svg class="location-icon" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                 </svg>
-                <span data-i18n="location">Cannes, Côte d'Azur</span>
+                <span data-i18n="location">Île de la Réunion - Saint-Paul</span>
             </p>
             <p class="hero-tagline"><span data-i18n="tagline_1">Votre guide numérique</span><br><span data-i18n="tagline_2">pour un séjour d'exception</span></p>
         </div>
