Amélioration démo: logo blanc footer + bouton retour au site

--- a/demo-guide/admin.html
+++ b/demo-guide/admin.html
@@ -90,7 +90,7 @@
                         
                         <div class="form-group">
                             <label for="property-name">Nom du logement (tel qu'affiché sur Airbnb) *</label>
-                            <input type="text" id="property-name" required placeholder="Ex: Appartement Vue Mer Cannes">
+                            <input type="text" id="property-name" required placeholder="Ex: Villa Vue Mer Saint-Paul">
                         </div>
 
                         <div class="form-group">
@@ -106,7 +106,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="city">Ville / Quartier *</label>
-                                <input type="text" id="city" required placeholder="Ex: Cannes - Centre-ville">
+                                <input type="text" id="city" required placeholder="Ex: Saint-Paul 97460 - Bord de mer">
                             </div>
                             <div class="form-group">
                                 <label for="floor">Étage (si applicable)</label>
@@ -116,7 +116,7 @@
 
                         <div class="form-group">
                             <label for="property-address">Adresse complète *</label>
-                            <input type="text" id="property-address" required placeholder="Ex: 15 Rue d'Antibes, 06400 Cannes">
+                            <input type="text" id="property-address" required placeholder="Ex: 15 Route de la Plage, 97460 Saint-Paul">
                         </div>
 
                         <div class="form-row">
@@ -447,7 +447,7 @@
 
                         <div class="form-group">
                             <label for="tourist-sites">Sites touristiques incontournables</label>
-                            <textarea id="tourist-sites" rows="3" placeholder="Ex: Palais des Festivals - 15 min à pied&#10;Îles de Lérins - Bateau depuis le vieux port&#10;Vieux Cannes - 10 min à pied"></textarea>
+                            <textarea id="tourist-sites" rows="3" placeholder="Ex: Plage de Boucan Canot - 5 min en voiture&#10;Marché de Saint-Paul - 10 min à pied&#10;Tour des Roches - Randonnée 2h"></textarea>
                         </div>
                     </div>
 
