Fix: logo blanc sur TOUTES les pages + cache buster pour traductions

--- a/demo-guide/index.html
+++ b/demo-guide/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Villa Vue Mer - Guide Luxe</title>
     <link rel="icon" type="image/jpeg" href="img/logo_icone.jpg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="luxury-body">
@@ -268,7 +268,7 @@
         setInterval(updateDateTime, 1000); // Mise à jour chaque seconde
         setInterval(updateWeather, 600000); // Mise à jour toutes les 10 minutes
     </script>
-    <script src="js/translations.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/translations.js?v=2"></script>
+    <script src="js/main.js?v=2"></script>
 </body>
 </html>
