--- a/demo-guide/pages/bonnes-adresses.html
+++ b/demo-guide/pages/bonnes-adresses.html
@@ -193,7 +193,7 @@
     </div>
 
     <footer style="text-align: center; padding: 0; margin-top: 32px;">
-        <img src="../img/logo.png" alt="QRGUIDE.FR" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: 0 auto -10px; padding: 0;">
+        <img src="../img/logo_blanc.png" alt="QRGUIDE.FR" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: 0 auto -10px; padding: 0;">
     </footer>
 
     <script src="../js/main.js"></script>
