--- a/demo-guide/pages/wifi-multimedia.html
+++ b/demo-guide/pages/wifi-multimedia.html
@@ -361,7 +361,7 @@
     </script>
 
     <footer style="text-align: center; padding: 0; margin-top: 32px;">
-        <img src="../img/logo.png" alt="QRGUIDE.FR" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: 0 auto -10px; padding: 0;">
+        <img src="../img/logo_blanc.png" alt="QRGUIDE.FR" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: 0 auto -10px; padding: 0;">
     </footer>
 </body>
 </html>
