--- a/demo-guide/index.html
+++ b/demo-guide/index.html
@@ -178,7 +178,7 @@
             <span class="contact-icon">📞</span>
             <span class="contact-text" data-i18n="need_help">Besoin d'aide ? Contactez-nous</span>
         </a>
-        <img src="img/logo_blanc.png" alt="QRGUIDE.FR" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: -2px auto -10px; padding: 0;">
+        <img src="img/logo.png" alt="QRGUIDE.FR" class="footer-logo" style="height: 100px; width: auto; opacity: 0.9; display: block; margin: -2px auto -10px; padding: 0;">
     </footer>
 
     <script>
