--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
             <h2 class="section-title">Scannez pour découvrir</h2>
             <p class="section-text">Voici un exemple de guide créé avec QRGUIDE</p>
             
-            <div class="demo-qr" style="text-align: center;">
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://qrguide.fr/demo" alt="QR Code Demo" style="margin: 0 auto; display: block;">
+            <div class="demo-qr">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://qrguide.fr/demo" alt="QR Code Demo">
                 <p>Ou visitez directement : <a href="demo-guide/index.html" target="_blank">Voir la démo</a></p>
             </div>
         </div>
@@ -348,7 +348,7 @@
             <div class="footer-content">
                 <div class="footer-col">
                     <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
-                    <p>Le guide numérique nouvelle génération pour locations saisonnières</p>
+                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels et hôtels</p>
                 </div>
                 <div class="footer-col">
                     <h4>Produit</h4>
