--- a/success.html
+++ b/success.html
@@ -108,7 +108,7 @@
             <div class="footer-content">
                 <div class="footer-col">
                     <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
-                    <p>Le guide numérique nouvelle génération pour locations saisonnières</p>
+                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels et hôtels</p>
                 </div>
                 <div class="footer-col">
                     <h4>Produit</h4>
