Footer: uniformisation sur toutes les pages (2025, suppression puces, format cohérent)

--- a/login.html
+++ b/login.html
@@ -254,36 +254,31 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <h4>QRGUIDE.FR</h4>
-                    <p>La solution complète pour créer des guides numériques interactifs pour vos locations saisonnières.</p>
+                    <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
+                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels</p>
                 </div>
                 <div class="footer-col">
-                    <h4>Liens rapides</h4>
-                    <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="tarifs.html">Tarifs</a></li>
-                        <li><a href="hotels.html">Pour les hôtels</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
+                    <h4>Produit</h4>
+                    <a href="#fonctionnalites">Fonctionnalités</a>
+                    <a href="#comment-ca-marche">Comment ça marche</a>
+                    <a href="tarifs.html">Tarifs</a>
+                    <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
+                </div>
+                <div class="footer-col">
+                    <h4>Support</h4>
+                    <a href="contact.html">Contact</a>
+                    <a href="mailto:contact@qrguide.fr">contact@qrguide.fr</a>
+                    <a href="tel:0692630364">06 92 63 03 64</a>
                 </div>
                 <div class="footer-col">
                     <h4>Légal</h4>
-                    <ul>
-                        <li><a href="mentions-legales.html">Mentions légales</a></li>
-                        <li><a href="cgv.html">CGV</a></li>
-                        <li><a href="politique-confidentialite.html">Confidentialité</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li>📧 contact@qrguide.fr</li>
-                        <li>📱 06 92 63 03 64</li>
-                    </ul>
+                    <a href="mentions-legales.html">Mentions légales</a>
+                    <a href="cgv.html">CGV</a>
+                    <a href="politique-confidentialite.html">Confidentialité</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QRGUIDE.FR - Tous droits réservés</p>
+                <p>&copy; 2025 QRGUIDE.FR - Tous droits réservés</p>
             </div>
         </div>
     </footer>
