--- a/success.html
+++ b/success.html
@@ -108,14 +108,13 @@
             <div class="footer-content">
                 <div class="footer-col">
                     <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
-                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels et hôtels</p>
+                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels</p>
                 </div>
                 <div class="footer-col">
                     <h4>Produit</h4>
                     <a href="index.html#fonctionnalites">Fonctionnalités</a>
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
-                    <a href="hotels.html">Hôtels</a>
                     <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
                 </div>
                 <div class="footer-col">
