--- a/hotels.html
+++ b/hotels.html
@@ -367,40 +367,32 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-section">
+                <div class="footer-col">
                     <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
-                    <p>La solution de guide numérique pour locations saisonnières et hôtels</p>
+                    <p>Le guide numérique nouvelle génération pour locations saisonnières et hôtels</p>
                 </div>
-                <div class="footer-section">
-                    <h4>Navigation</h4>
-                    <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="index.html#fonctionnalites">Fonctionnalités</a></li>
-                        <li><a href="index.html#comment-ca-marche">Comment ça marche</a></li>
-                        <li><a href="tarifs.html">Tarifs</a></li>
-                        <li><a href="hotels.html">Hôtels</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
+                <div class="footer-col">
+                    <h4>Produit</h4>
+                    <a href="#fonctionnalites">Fonctionnalités</a>
+                    <a href="#comment-ca-marche">Comment ça marche</a>
+                    <a href="tarifs.html">Tarifs</a>
+                    <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
                 </div>
-                <div class="footer-section">
+                <div class="footer-col">
                     <h4>Support</h4>
-                    <ul>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="abonnement.html">S'abonner</a></li>
-                        <li><a href="demo-guide/index.html" target="_blank">Voir la démo</a></li>
-                    </ul>
+                    <a href="contact.html">Contact</a>
+                    <a href="mailto:contact@qrguide.fr">contact@qrguide.fr</a>
+                    <a href="tel:0692630364">06 92 63 03 64</a>
                 </div>
-                <div class="footer-section">
+                <div class="footer-col">
                     <h4>Légal</h4>
-                    <ul>
-                        <li><a href="mentions-legales.html">Mentions légales</a></li>
-                        <li><a href="cgv.html">CGV</a></li>
-                        <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
-                    </ul>
+                    <a href="mentions-legales.html">Mentions légales</a>
+                    <a href="cgv.html">CGV</a>
+                    <a href="politique-confidentialite.html">Confidentialité</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QRGUIDE.FR - Tous droits réservés</p>
+                <p>&copy; 2025 QRGUIDE.FR - Tous droits réservés</p>
             </div>
         </div>
     </footer>
