--- a/success.html
+++ b/success.html
@@ -201,6 +201,7 @@
                         name: data.name,
                         amount: data.amount / 100,
                         planType: data.planType,
+                        plaqueQty: data.plaqueQty || 0,
                         password: generatedPassword
                     })
                 });
